--- a/5_html5Assignment.html
+++ b/5_html5Assignment.html
@@ -44,7 +44,7 @@
     </section>
     <section>
       <h1>Google Map</h1>
-      <div style="left: 0; height: 0; position: relative; padding-bottom: 100%;"><iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD1VnYC6EugmolDY9RjsZ77TeXstyj0288&q=Taj Mahal&center=27.1748825,78.0390573&zoom=18" style="top: 0; left: 0; width: 100%; height: 100%; position: absolute; border: 0;" allowfullscreen></iframe></div>
+      <div class="mapouter"><div class="gmap_canvas"><iframe width="770" height="510" id="gmap_canvas" src="https://maps.google.com/maps?q=tajmahal&t=&z=10&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2yu.co">2yu</a><br><style>.mapouter{position:relative;text-align:right;height:510px;width:770px;}</style><a href="https://embedgooglemap.2yu.co">html embed google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:510px;width:770px;}</style></div></div>
     </section>
     <section>
         <h1>Favourite Songs</h1>
