--- a/02_test.html
+++ b/02_test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>test-2</title>
-    <link rel="stylesheet" href="/css/test2.css" />
+    <link rel="stylesheet" href="./css/test2.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -75,7 +75,7 @@
         </p>
       </div>
       <div class="image">
-        <img src="/images/profilePic.webp" alt="profile" />
+        <img src="./images/profilePic.webp" alt="profile" />
         <div class="icons">
           <i class="fa-brands fa-instagram"></i>
           <i class="fa-solid fa-cloud"></i>
@@ -90,7 +90,7 @@
       </div>
     </section>
     <footer>
-      <img src="/images//logo.png" alt="logo" />
+      <img src="./images/logo.png" alt="logo" />
       <h2>
         39/40, Shop #2, Sethi Niwas, 4th Rd, Khar West , Opp Bharat Bank, Mumbai
         400 052
