--- a/mctAssignment.html
+++ b/mctAssignment.html
@@ -353,6 +353,50 @@
             />
           </div>
         </div>
+        <div class="comments">
+          <div class="comments-row">
+            <div class="comments-col">
+              <p>“My best friend in scaling my business”</p>
+            </div>
+            <div class="comments-col">
+              <p>“Like putting my finances on auto-pilot”</p>
+            </div>
+            <div class="comments-col"><p>“Bonsai does the hard work”</p></div>
+            <div class="comments-col"><p>“Everything is streamlined”</p></div>
+          </div>
+          <div class="comments-row">
+            <div class="comments-col"><p>“Huge timesaver”</p></div>
+            <div class="comments-col">
+              <p>“It’s been the most stress-free year of my life!”</p>
+            </div>
+            <div class="comments-col"><p>“I feel more confident”</p></div>
+            <div class="comments-col"><p>“Backbone of my business”</p></div>
+            <div class="comments-col"><p>“So simple”</p></div>
+          </div>
+          <div class="comments-row">
+            <div class="comments-col">
+              <p>“Clients love how easy my systems are”</p>
+            </div>
+            <div class="comments-col"><p>“A must-have!”</p></div>
+            <div class="comments-col">
+              <p>“I do less admin and do more of what I love”</p>
+            </div>
+            <div class="comments-col">
+              <p>“Worry-free contracts and invoices”</p>
+            </div>
+          </div>
+          <div class="comments-row">
+            <div class="comments-col"><p>“It pays for itself”</p></div>
+            <div class="comments-col"><p>“Great customer service!”</p></div>
+            <div class="comments-col"><p>“A life-saver!”</p></div>
+            <div class="comments-col">
+              <p>“Clients take me more seriously”</p>
+            </div>
+            <div class="comments-col">
+              <p>“I upped my rates and won more clients”</p>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="contact-us container">
         <div class="contact-image">
