--- a/mctAssignment.html
+++ b/mctAssignment.html
@@ -49,7 +49,13 @@
       <section class="hero container">
         <h1>Pick the best plan for</h1>
         <h1>your business</h1>
-        <button class="btn1">Monthly</button>
+        <div class="grey-btn">
+          <h2>Mothly</h2>
+          <div class="green-btn">
+            <h2>Yearly</h2>
+            <div class="cream-btn"><h2>2 months for free</h2></div>
+          </div>
+        </div>
       </section>
       <section class="price-container container">
         <div class="price-block">
